# Crafting-package-V3

./: LICENSE  README.md  pyproject.toml
crafting_package/: README.md  pyproject.toml
crafting_package/crafting_pkg/: admin.py  apps.py
crafting_package/crafting_pkg/crafting_ext/: cog.py
crafting_pkg/: __init__.py  admin.py  apps.py  models.py
crafting_pkg/crafting_ext/: __init__.py  cog.py  crafting_utils.py  crafting_views.py  logic.py  models.py  session_manager.py
crafting_pkg/migrations/: 0001_initial.py
