[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crafting_pkg"
version = "1.0.0"
description = "Crafting package for BallsDex"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "ballsdex>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/your-name/ballsdex-crafting-package"
