[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crafting_pkg"
version = "1.0.1"
description = "Crafting package for BallsDex"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/CharGoon26/Crafting-package-V3"

[tool.setuptools.packages.find]
include = ["crafting_pkg*"]
